Please let me know if you have problems building it.

-------------------------------------------------------------------------------

Sun Oct 31 21:36:50 GMT 1999
(gilbertt)

New cloak-animation - text banner.
Fixed my bouncing ball.
Rand()omised my atoms.

-------------------------------------------------------------------------------

Mon Nov 1 22:06:12 GMT 1999
(gilbertt)

Nothing spectacular:
	Fixed some issues with a couple of cloak-anims
	Added SineWave. Unless I'm feeling wacky sometime, that just about
	does it for cloak-anims. Enough is enough ;-)

-------------------------------------------------------------------------------

Mon Nov 2 18:59:14 GMT 1999
(gilbertt)

Oh dear. There was something terribly wrong with my starfields. I think
there still is, but it's better.

-------------------------------------------------------------------------------

Tue Nov  2 13:31:28 PST 1999
(KainX)

An update from Matt McClanahan <cardinal@dodds.net> to his previous patch.

-------------------------------------------------------------------------------

Tue Nov  2 18:28:36 PST 1999
(KainX)

A new cloak mode for E-ScreenShoot...random!  You can guess what it does.

-------------------------------------------------------------------------------

Wed Nov  3 23:58:36 GMT 1999
(gilbertt)

More late-night coding for Tom ;-)
The trouble with using a .1f format string for something which will
accept a < 0.1 value, is that the value is written as 0.
This is clearly not a good idea, and led to an interesting 5 minutes
bug-hunt.

-------------------------------------------------------------------------------

Thu Nov  4 16:00:26 PST 1999
(KainX)

E-Slides, a slideshow epplet.  This is just the initial version; more features
coming soon.  :-)

Also some API additions/bugfixes.

-------------------------------------------------------------------------------

Thu Nov  4 18:39:32 PST 1999
(KainX)

Several new features for E-Slides and some new icons.